[gd_scene load_steps=3 format=3 uid="uid://nhhhyfmirj2"]

[ext_resource type="Script" path="res://scripts/multiplayer_controls.gd" id="1_upll6"]
[ext_resource type="PackedScene" uid="uid://b4e3pvi0xiqn8" path="res://scenes/player/player.tscn" id="2_lg2uu"]

[node name="Multiplayer_Controls" type="Node"]
script = ExtResource("1_upll6")
player_scene = ExtResource("2_lg2uu")

[node name="Host_Button" type="Button" parent="."]
offset_left = 92.0
offset_top = 13.0
offset_right = 142.0
offset_bottom = 45.0
focus_mode = 0
text = "Host"

[node name="Join_Button" type="Button" parent="."]
offset_left = 272.0
offset_top = 56.0
offset_right = 323.0
offset_bottom = 87.0
focus_mode = 0
text = "Join"

[node name="Copy_Button" type="Button" parent="."]
offset_left = 334.0
offset_top = 13.0
offset_right = 400.0
offset_bottom = 44.0
focus_mode = 0
text = "Copy
"

[node name="Paste_Button" type="Button" parent="."]
offset_left = 334.0
offset_top = 54.0
offset_right = 402.0
offset_bottom = 86.0
focus_mode = 0
text = "Paste
"

[node name="IP_Input" type="LineEdit" parent="."]
offset_left = 18.0
offset_top = 55.0
offset_right = 188.0
offset_bottom = 86.0
placeholder_text = "IP"

[node name="JoinPort_Input" type="LineEdit" parent="."]
offset_left = 196.0
offset_top = 55.0
offset_right = 263.063
offset_bottom = 86.0
placeholder_text = "PORT"

[node name="HostPort_Input" type="LineEdit" parent="."]
offset_left = 17.0
offset_top = 13.0
offset_right = 84.0625
offset_bottom = 44.0
text = "135"
placeholder_text = "HOST PORT"

[node name="IP_Label" type="Label" parent="."]
offset_left = 177.0
offset_top = 14.0
offset_right = 307.0
offset_bottom = 43.0

[connection signal="pressed" from="Host_Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Join_Button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Copy_Button" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="Paste_Button" to="." method="_on_paste_button_pressed"]
